bikeshedding is fun

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ exploit [=personal data=] at scale.
 The goal of this document is to define principles that may prove useful in developing
 technology and policy that relate to privacy and [=personal data=].
 
-[=Personal data=] is covered by regulations and this document recognises that existing data
-protection regimes take precedence for legal matters. However, because the Web is global, we
+[=Personal data=] is covered by legal frameworks and this document recognises that existing data
+protection laws take precedence for legal matters. However, because the Web is global, we
 benefit from having shared concepts to guide its evolution as a system built for its users
 [[?RFC8890]]. A clear and well-defined view of privacy on the Web, informed by research,
 can hopefully help all the Web's participants in different legal regimes. Our shared
