Apply style guide to intro (#46)
* apply style guide to intro

* sort out trust and refs

* no need for the list

* bikeshedding is fun

--- a/index.html
+++ b/index.html
@@ -257,27 +257,23 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 # Introduction {#intro}
 
-Privacy is essential to trust, and trust is a cornerstone value of the Web [[?RFC8890]].
-In much of everyday life, people have little difficulty assessing whether a given flow of
-information constitutes a violation of privacy or not [[?NYT-PRIVACY]]. However, in the digital
-space, users struggle to understand how their data may flow between contexts and how such
-flows may affect them, not just immediately but at a much later time and in completely
-different situations. Some actors then seize upon this confusion in order to extract and
-exploit [=personal data=] at unprecedented scale.
+Privacy is an essential value of the Web ([[?ETHICAL-WEB]], [[?design-principles]]).
+In everyday life, people typically find it easy to assess whether a given flow of
+information is a violation of privacy or not [[?NYT-PRIVACY]]. However, in the digital
+space, users struggle to understand how their data may be moved between contexts and how that
+may affect them. This is particularly true if they may be affected at a much later time and
+in completely different situations. Some actors are using this confusion to extract and
+exploit [=personal data=] at scale.
 
-The goal of this document is to define all the terms that may prove useful in developing
-technology and policy that relate to privacy and [=personal data=]. It additionally provides
-a toolbox to support the common need that is privacy threat modelling, the frequent debate
-over consent, and the under-developed set of issues in privacy that are of a
-collective, relational nature.
+The goal of this document is to define principles that may prove useful in developing
+technology and policy that relate to privacy and [=personal data=].
 
-[=Personal data=] is a regulated object, and this document naturally recognises the
-jurisdictional primacy of existing data protection regimes. However, the global nature of
-the Web means that, as we develop technology, we benefit from shared concepts that guide the
-evolution of the Web as a system built for its users [[?RFC8890]]. A clear and well-defined
-view of privacy on the Web, grounded in an up-to-date understanding of the state of the art,
-can hopefully help the Web's constituencies thrive across jurisdictional disparity, with the
-shared understanding that the law is a floor, not a ceiling.
+[=Personal data=] is covered by legal frameworks and this document recognises that existing data
+protection laws take precedence for legal matters. However, because the Web is global, we
+benefit from having shared concepts to guide its evolution as a system built for its users
+[[?RFC8890]]. A clear and well-defined view of privacy on the Web, informed by research,
+can hopefully help all the Web's participants in different legal regimes. Our shared
+understanding is that the law is a floor, not a ceiling.
 
 # Definitions {#definitions}
 
