--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ We define <dfn data-lt="identifier">identifying data</dfn> as any information re
 
 1. It references this [=person=] directly, for instance through their name,
   email address, phone number, or other such traditional denotation.
-* It can identify this [=person=] through an arbitrary string or identification
+1. It can identify this [=person=] through an arbitrary string or identification
   number, an online identifier such as an IP address or any identifier attached to a
   device which this [=person=] may be using.
 * It is about a [=person=]'s location (or of a device that a [=person=] would use) with greater
