--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ We define <dfn data-lt="identifier">identifying data</dfn> as any information re
 1. It can identify this [=person=] through an arbitrary string or identification
   number, an online identifier such as an IP address or any identifier attached to a
   device which this [=person=] may be using.
-* It is about a [=person=]'s location (or of a device that a [=person=] would use) with greater
+* It describes a [=person=]'s location (or of a device that a [=person=] would use) with greater
   granularity than the city level or a comparably coarse geographic grouping.
 * It contains factors specific to the physical, physiological, genetic, mental,
   economic, cultural, or social identity of a [=person=].
