Improve the style of the one graf in Definitions

--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ understanding is that the law is a floor, not a ceiling.
 
 # Definitions {#definitions}
 
-This section provides a number of elementary building blocks from which to establish a
-shared understanding of privacy. Some of the definitions below build atop the work in
+This section provides a number of building blocks to create a shared understanding of
+privacy. Some of the definitions below build on top of the work in
 <em>Tracking Preference Expression (DNT)</em> [[tracking-dnt]].
 
 ## People &amp; Data {#people-data}
