--- a/index.html
+++ b/index.html
@@ -646,15 +646,7 @@ in content aggregation [[?CAT]].
 
 Reference to the [=FIPs=] survives to this day. They are often referenced as <em>transparency
 and choice</em>, which, in today's digital environment, is often a strong indication that
-[=inappropriate=] [=processing=] is being described.
-
-<figure>
-<img src="agnes-tc.jpg" alt="Agnes from Wandavision winking 'Transparency and choice'">
-<figcaption>
-  A method of privacy regulation which promises honesty and autonomy but delivers neither.
-  [[?CONFIDING]].
-</figcaption>
-</figure>
+[=inappropriate=] [=processing=] is being described. [[?CONFIDING]]
 
 ## Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
