Apply suggestions from code review
Co-authored-by: Wendy Seltzer <wendy+gh@seltzer.org>
Co-authored-by: Daniel Appelquist <dan@torgo.com>

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ technical feature that is fundamental to the Web.</span></p>
 * This principle uses "quickly" because it currently appears impossible to prevent some forms of
   fingerprinting that take a long time or many visits within each [=partition=].
 * This principle is limited in cases that only affect a small fraction of people who use the web
-  because people need to be allowed to configure their systems in unique ways, for example by using
+  because people may configure their systems in unique ways, for example by using
   a browser with a very small number of users. As long as a tracker can't track a significant number
   of people, it's likely to be unviable to maintain the tracker. However, this doesn't excuse making
   small groups of people trackable when those people didn't choose to be in the group.
@@ -969,7 +969,7 @@ Guidance § Clearing all local state</a> discusses how specifications can help
 browsers avoid this mistake.
 
 Fingerprinting consists of using attributes of the user's browser and platform
-that are consistent between two or more visits and probabilistically unique to the
+that are consistent between two or more visits and probably unique to the
 user.
 
 The attributes can be exposed as information about the user's device that is
