--- a/index.html
+++ b/index.html
@@ -700,9 +700,8 @@ three privacy tiers:
     should also be defined differently for certain kinds of [=contexts=]. The legitimate
     [=processing=] that can take place in this tier derives its legitimacy from matching the
     expectations and interests of both the [=user=] and the [=first party=] in their
-    relationship, as guided by the applicable [=norms=].  If the [=first party=] has knowledge
-    of the user's [=identity=], it should make the [=identity=] it is using, along with its own branding
-	as the [=data controller], obvious to the user.  [[?TWITTER-DEVELOPER-POLICY]]
+    relationship, as guided by the applicable [=norms=].  If the [=first party=] is using a particular [=identity=] for a [=person=], it should show the person which identity it is using, along with its own branding
+	as the [=data controller].  [[?TWITTER-DEVELOPER-POLICY]]
     This tier is more [=appropriate=] the more the
     [=first party=] acts in accordance with [=fiduciary duties=]. 
   </dd>
