nit: no need for the wrapping p

--- a/index.html
+++ b/index.html
@@ -556,9 +556,9 @@ store data about that user.
 
 <div class="practice">
 
-<p><span class="practicelab" id="principle-identity-per-context">[=User agents=] should support
+<span class="practicelab" id="principle-identity-per-context">[=User agents=] should support
 their [=users=]' [=autonomy=] by helping them present their intended [=identity=] to each
-[=context=] that they visit.</span></p>
+[=context=] that they visit.</span>
 
 </div>
 
