--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ work as is more respectable.
 ## User Agents {#user-agents}
 
 The <dfn>user agent</dfn> acts as an intermediary between a [=user=] and the web. The
-[=user agent=] is <em>not</em> a [=context=] in that it is expected to align fully with its
+[=user agent=] is <em>not</em> a [=context=] because it is expected to align fully with its
 [=user=] and operate exclusively in that [=person=]'s interest. It is <em>not</em> the
 [=first party=]. The [=user agent=] serves the [=user=] as a <dfn>trustworthy agent</dfn>:
 it always puts the [=user=]'s interest first. In some occasions, this can mean protecting
