--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ The <dfn>user agent</dfn> acts as an intermediary between a [=user=] and the web
 [=first party=]. The [=user agent=] serves the [=user=] as a <dfn>trustworthy agent</dfn>:
 it always puts the [=user=]'s interest first. In some occasions, this can mean protecting
 the [=user=] from themselves by preventing them from carrying out a dangerous decision,
-or at the very least by slowing down the user in their decision. For example, the
+or by slowing down the user in their decision. For example, the
 [=user agent=] will make it difficult for the [=user=] to connect to a site if it can't verify
 that the site is authentic. It will check that the [=user=] really intends to expose a
 sensitive device to a page. It will prevent the [=user=] from consenting to the permanent
