--- a/index.html
+++ b/index.html
@@ -505,10 +505,10 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
   </dd>
   <dt><dfn>Duty of Honesty</dfn></dt>
   <dd>
-    Honesty requires that the [=user agent=] make sure that the [=user=] is actively
-    given information that is relevant to them and that will increase the [=user=]'s
-    autonomy, as much as possible in a manner that they will comprehend and at the right
-    moment. This is almost never when the [=user=] is trying to do something else such as
+    Honesty requires that the [=user agent=] try to give the [=user=]
+    information that is relevant to them and that will increase the [=user=]'s
+    autonomy, as long as they can understand it and there's an appropriate
+    time. This is almost never when the [=user=] is trying to do something else such as
     read a page or activate a feature. The duty of honesty goes well beyond that of
     transparency that is often included in older privacy regimes. Unlike transparency, honesty
     can't hide relevant information in complex out-of-band legal notices and it can't rely on
