--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ These duties ensure the [=user agent=] will <em>care</em> for the user. It is im
 note that there is a subtle difference between care and <dfn>data paternalism</dfn>.
 [=Data paternalism=] claims to help in part by removing agency ("<em>don't worry about it,
 so long as your data is with us it's safe, you don't need to know what we do with it, it's
-all good because we're good people</em>") whereas [=care=] aims to support people by enhancing
+all good because we're good people</em>") whereas care aims to support people by enhancing
 their agency and sovereignty.
 
 In academic research, this relationship with a [=trustworthy agent=] is often described as
