--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
     Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
     [=user=] in all situations, including in preference to the [=user agent=]'s implementer.
     When a [=user agent=] carries out [=processing=] that is not directly in the [=user=]'s
-    interest but rather benefits another entity such as the implementer that behaviour is
-    known as <dfn>self-dealing</dfn>. Behaviour is [=self-dealing=] even if it is done at the
+    interest but instead benefits another entity (such as the user agent's implementer) that behaviour is
+    known as <dfn>self-dealing</dfn>. Behaviour can be [=self-dealing=] even if it is done at the
     same time as [=processing=] that is in the [=user=]'s interest. [=Self-dealing=] is always
     [=inappropriate=]. Loyalty is the avoidance of [=self-dealing=].
   </dd>
