Remove "out of band"
Shorten a sentence that applies to all legal notices, not just
out of band ones.

Refs #64

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ monitoring of their behaviour. Its <dfn>user agent duties</dfn> include
     time. This is almost never when the [=user=] is trying to do something else such as
     read a page or activate a feature. The duty of honesty goes well beyond that of
     transparency that is often included in older privacy regimes. Unlike transparency, honesty
-    can't hide relevant information in complex out-of-band legal notices and it can't rely on
+    can't hide relevant information in complex legal notices and it can't rely on
     very short summaries provided in a consent dialog.
     If the user has provided [=consent=] to [=processing=] of their [=personal data=],
     the [=user agent=] should inform the user of ongoing [=processing=], with a
