Remove "out of band" (#67)
SHA: 9cc82548b86b86b823c9a77e5017c59dcb2ee07d
Reason: push, by @torgo

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ monitoring of their behaviour. Its <dfn id="dfn-user-agent-duties" tabindex="0" 
     time. This is almost never when the <a data-link-type="dfn" href="#dfn-user" class="internalDFN" id="ref-for-dfn-user-19">user</a> is trying to do something else such as
     read a page or activate a feature. The duty of honesty goes well beyond that of
     transparency that is often included in older privacy regimes. Unlike transparency, honesty
-    can't hide relevant information in complex out-of-band legal notices and it can't rely on
+    can't hide relevant information in complex legal notices and it can't rely on
     very short summaries provided in a consent dialog.
     If the user has provided <a data-link-type="dfn" href="#dfn-consent" class="internalDFN" id="ref-for-dfn-consent-1">consent</a> to <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-18">processing</a> of their <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-10">personal data</a>,
     the <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-10">user agent</a> should inform the user of ongoing <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-19">processing</a>, with a
