--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ share data between the contexts, the fact that those distinct [=contexts=] fall 
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
 
-## Control and Autonomy {#autonomy}
+## Personal Control and Autonomy {#autonomy}
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
 without undue influence from other parties. People have limited intellectual resources and
