Add rationale for person/user

--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@ privacy. Some of the definitions below build on top of the work in
 
 ## People &amp; Data {#people-data}
 
-A <dfn>user</dfn> (also <dfn data-lt="individual">person</dfn> or <dfn>data subject</dfn>) is any natural
-person.
+A <dfn data-lt="individual">person</dfn> (also <dfn>user</dfn> or <dfn>data subject</dfn>) is any natural
+person. Throughout this document, we primarily use [=person=] or [=people=] to refer to human beings, as a
+reminder of their humanity. When we use the term [=user=], it is to talk about the specific [=person=]
+who happens to be using a given system at that time.
 
 We define <dfn data-lt="data">personal data</dfn> as any information relating to a [=person=] such
 that:
