--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ intellectual or psychological impairment, or refugees.
 
 A <dfn>party</dfn> is an entity that a [=person=] can reasonably understand as a single "thing"
 they're interacting with. Uses of this document in a particular domain are expected to describe how
-the core concepts of that domain combine into a comprehensible [=party=], and those refined
+the core concepts of that domain combine into a [=user=]-comprehensible [=party=], and those refined
 definitions are likely to differ between domains.
 
 The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which a [=person=]'s intends to
