--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ they're interacting with. Uses of this document in a particular domain are expec
 the core concepts of that domain combine into a [=user=]-comprehensible [=party=], and those refined
 definitions are likely to differ between domains.
 
-The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which a [=person=]'s intends to
+The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which a [=person=] intends to
 interact. Merely hovering over, muting, pausing, or closing a given piece of content does
 not constitute a [=person=]'s intent to interact with another party, nor does the simple
 fact of loading a [=party=] embedded in the one with which the person intends to
